# multiloginlocal/api/misc_api.py
@@ -5,7 +5,7 @@
 
     Multilogin Local REST API can be used in order to start, stop, share, clone browser profile/-s. You can also check if the profile is already running on your machine by using checkProfileRunning endpoint and import cookies by using cookieImportJSON/cookieImportNetscape endpoint.  # noqa: E501
 
-    OpenAPI spec version: 1.0
+`    OpenAPI spec version: 1.0.4
     
     Generated by: https://github.com/swagger-api/swagger-codegen.git
 """
@@ -43,7 +43,7 @@ class MiscApi(object):
 
         :param async_req bool
         :param str profile_id: Browser profile ID (required)
-        :return: None
+        :return: ProfileActiveOkResponse
                  If the method is called asynchronously,
                  returns the request thread.
         """
@@ -65,7 +65,7 @@ class MiscApi(object):
 
         :param async_req bool
         :param str profile_id: Browser profile ID (required)
-        :return: None
+        :return: ProfileActiveOkResponse
                  If the method is called asynchronously,
                  returns the request thread.
         """
@@ -104,6 +104,10 @@ class MiscApi(object):
         local_var_files = {}
 
         body_params = None
+        # HTTP header `Accept`
+        header_params['Accept'] = self.api_client.select_header_accept(
+            ['application/json'])  # noqa: E501
+
         # Authentication setting
         auth_settings = []  # noqa: E501
 
@@ -115,7 +119,7 @@ class MiscApi(object):
             body=body_params,
             post_params=form_params,
             files=local_var_files,
-            response_type=None,  # noqa: E501
+            response_type='ProfileActiveOkResponse',  # noqa: E501
             auth_settings=auth_settings,
             async_req=params.get('async_req'),
             _return_http_data_only=params.get('_return_http_data_only'),
